# traffic-monitor

./: CMakeLists.txt
src/: AppConfig.cpp  Tracker.cpp  main.cpp
tests/: CMakeLists.txt
tests/background_subtractor/: BackgroundSubtractorTest.cpp  CMakeLists.txt
tests/blob/: CMakeLists.txt
tests/tracker/: CMakeLists.txt  TrackerTest.cpp
tests/transform/: CMakeLists.txt
